// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab render panelHeader 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 90,
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View
        accessibilityLabel="panelHeaderLeftView"
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "flex-start",
              "maxWidth": 144,
            },
            {
              "minWidth": 36,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            {
              "flex": 1,
            },
          ]
        }
      />
      <View
        accessibilityLabel="panelHeaderRightView"
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "flex-end",
              "maxWidth": 144,
            },
            {
              "minWidth": 36,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader isSafeAreaView 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": 90,
          "justifyContent": "space-between",
          "paddingHorizontal": 30,
          "paddingVertical": 15,
        },
        {
          "backgroundColor": "#000",
        },
      ]
    }
  >
    <View
      accessibilityLabel="panelHeaderLeftView"
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "flex-start",
            "maxWidth": 144,
          },
          {
            "minWidth": 36,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#5E6678",
            "fontFamily": "Neotis",
            "fontSize": 36,
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        [
          {
            "flex": 2,
            "paddingHorizontal": 12,
          },
          {
            "flex": 1,
          },
        ]
      }
    />
    <View
      accessibilityLabel="panelHeaderRightView"
      onLayout={[Function]}
      style={
        [
          {
            "alignItems": "flex-end",
            "maxWidth": 144,
          },
          {
            "minWidth": 36,
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          {
            "color": "#5E6678",
            "fontFamily": "Neotis",
            "fontSize": 36,
          }
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Tab render panelHeader only leftView 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 90,
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View
        accessibilityLabel="panelHeaderLeftView"
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "flex-start",
              "maxWidth": 144,
            },
            {
              "minWidth": 36,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            {
              "flex": 1,
            },
          ]
        }
      />
      <View
        style={
          {
            "width": 36,
          }
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader only rightView 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 90,
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          {
            "backgroundColor": "#000",
          },
        ]
      }
    >
      <View
        style={
          {
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            {
              "flex": 1,
            },
          ]
        }
      />
      <View
        accessibilityLabel="panelHeaderRightView"
        onLayout={[Function]}
        style={
          [
            {
              "alignItems": "flex-end",
              "maxWidth": 144,
            },
            {
              "minWidth": 36,
            },
            {
              "flex": 1,
            },
          ]
        }
      >
        <Text
          allowFontScaling={true}
          style={
            {
              "color": "#5E6678",
              "fontFamily": "Neotis",
              "fontSize": 36,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with subtitle 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 90,
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#5E6678",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 18,
                  "lineHeight": 24,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            Subtitle
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "width": 36,
          }
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader with title 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 90,
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        >
          <Text
            allowFontScaling={true}
            numberOfLines={1}
            style={
              [
                {
                  "color": "#444B5A",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 24,
                  "lineHeight": 30,
                },
                [
                  {
                    "textAlign": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            title
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "width": 36,
          }
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;

exports[`Tab render panelHeader without props 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <RNCSafeAreaView
    edges={
      [
        "top",
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 90,
            "justifyContent": "space-between",
            "paddingHorizontal": 30,
            "paddingVertical": 15,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          {
            "width": 36,
          }
        }
      />
      <View
        style={
          [
            {
              "flex": 2,
              "paddingHorizontal": 12,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "alignItems": "center",
            }
          }
        />
      </View>
      <View
        style={
          {
            "width": 36,
          }
        }
      />
    </View>
  </RNCSafeAreaView>
</View>
`;
